--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: 'JetBrains Mono', monospace;
+  font-style: normal;
+  font-weight: 200;
+  src: url("../fonts/JetBrainsMono-ExtraLight.woff2") format("woff2");
+}
+
+
+@font-face {
+  font-family: 'JetBrains Mono', monospace;
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/JetBrainsMono-Regular.woff2") format("woff2");
+}
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
