--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -3,11 +3,12 @@
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
     0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.04);
+
 }
 
 .nav {
-  max-width: 1280px;
-  margin: 0 auto;
+  /* max-width: 1280px;
+  margin: 0 auto; */
   position: relative;
   width: 100%;
   display: flex;
@@ -27,4 +28,6 @@
 .button {
   display: flex;
   align-items: center;
+  text-decoration: none;
+  color: #F2F2F3;
 }
