--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,20 +1,18 @@
 .header {
+  max-width: 1920px;
+  width: 100%;
   background: #1c1c21;
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
     0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.04);
-
 }
 
 .nav {
-  /* max-width: 1280px;
-  margin: 0 auto; */
-  position: relative;
-  width: 100%;
+  width: 1280px;
+  margin: 0 auto;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  position: relative;
+  align-items: center;
 }
 .wrap {
   display: flex;
@@ -23,11 +21,11 @@
 .logo {
   position: absolute;
   left: 50%;
-  transform: translate(-50%, 0); 
+  transform: translate(-50%, 0);
 }
 .button {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #F2F2F3;
+  color: #f2f2f3;
 }
