--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -5,6 +5,7 @@
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
     0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.04);
+    margin-top: 40px;
 }
 
 .nav {
@@ -27,5 +28,8 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  color: #8585ad;
+}
+.button_active {
   color: #f2f2f3;
 }
