--- a/src/components/ingredient-info/ingredient-info.module.css
+++ b/src/components/ingredient-info/ingredient-info.module.css
@@ -7,6 +7,7 @@
 .title {
   display: flex;
   align-items: center;
+  justify-content: center;
   max-width: 640px;
   width: 100%;
   min-height: 64px;
